renamed the nginx folder

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx:/etc/nginx
     depends_on:
       - planit
   planit:
