renamed the nginx folder

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 
 
-upstream fastapi {
+upstream http://ec2-3-80-25-48.compute-1.amazonaws.com {
     server planit:8089;
 }
 
@@ -8,7 +8,7 @@ upstream fastapi {
 
 server {
     listen 80;
-    server_name fastapi;
+    server_name http://ec2-3-80-25-48.compute-1.amazonaws.com;
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
