--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 
 
-upstream http://ec2-3-80-25-48.compute-1.amazonaws.com {
+upstream planit_backend {
     server planit:8089;
 }
 
@@ -15,7 +15,7 @@ server {
 
 
     location / {
-        proxy_pass http://ec2-3-80-25-48.compute-1.amazonaws.com;
+        proxy_pass http://planit_backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
