--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 motor = "^2.5.0"
 Jinja2 = "^3.1.4"
+sqlmodel = "^0.0.7"
+psycopg2-binary = "^2.9.1"
 
 
 [tool.poetry.dev-dependencies]
